--- a/ZEditor/ZEDBrowser/ZEDBrowser.ui
+++ b/ZEditor/ZEDBrowser/ZEDBrowser.ui
@@ -1,158 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ZEDAssertBrowserUI</class>
- <widget class="QMainWindow" name="ZEDAssertBrowserUI">
+ <class>ZEDBrowserUI</class>
+ <widget class="QMainWindow" name="ZEDBrowserUI">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>890</width>
+    <width>740</width>
     <height>683</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Assert Browser</string>
+   <string>Browser</string>
   </property>
   <property name="styleSheet">
    <string/>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <property name="spacing">
-     <number>4</number>
-    </property>
-    <property name="margin">
-     <number>4</number>
-    </property>
+   <layout class="QVBoxLayout" name="Layout">
     <item>
      <widget class="QSplitter" name="splitter">
+      <property name="baseSize">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <widget class="QTreeView" name="DirectoryBrowser">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="headerHidden">
-        <bool>false</bool>
-       </property>
+      <property name="childrenCollapsible">
+       <bool>false</bool>
+      </property>
+      <widget class="QWidget" name="verticalLayoutWidget">
+       <layout class="QVBoxLayout" name="LeftLayout"/>
       </widget>
-      <widget class="QScrollArea" name="PreviewsViewport">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="widgetResizable">
-        <bool>true</bool>
-       </property>
-       <widget class="QWidget" name="scrollAreaWidgetContents">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>69</width>
-          <height>594</height>
-         </rect>
-        </property>
-       </widget>
+      <widget class="QWidget" name="verticalLayoutWidget_2">
+       <layout class="QVBoxLayout" name="RightLayout">
+        <item>
+         <widget class="QScrollArea" name="BrowserScrollArea">
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="scrollAreaWidgetContents">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>694</width>
+             <height>618</height>
+            </rect>
+           </property>
+          </widget>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
+  <widget class="QMenuBar" name="MenuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>890</width>
+     <width>740</width>
      <height>22</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuPreviews">
-    <property name="title">
-     <string>Previews</string>
-    </property>
-    <addaction name="SmallAction"/>
-    <addaction name="MediumAction"/>
-    <addaction name="LargeAction"/>
-   </widget>
-   <widget class="QMenu" name="menuOperations">
-    <property name="title">
-     <string>Operations</string>
-    </property>
-    <addaction name="NewResourceActon"/>
-    <addaction name="EditAction"/>
-    <addaction name="CopyAction"/>
-    <addaction name="PasteAction"/>
-    <addaction name="CutAction"/>
-    <addaction name="DeleteAction"/>
-   </widget>
-   <widget class="QMenu" name="menuSelection">
-    <property name="title">
-     <string>Selection</string>
-    </property>
-    <addaction name="SelectAllAciton"/>
-    <addaction name="DesellectAction"/>
-   </widget>
-   <addaction name="menuOperations"/>
-   <addaction name="menuPreviews"/>
-   <addaction name="menuSelection"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QToolBar" name="OperationsToolbar">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="windowTitle">
-    <string>OperationsToolbar</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="NewResourceActon"/>
-   <addaction name="EditAction"/>
-   <addaction name="CutAction"/>
-   <addaction name="CopyAction"/>
-   <addaction name="PasteAction"/>
-   <addaction name="DeleteAction"/>
-  </widget>
-  <widget class="QToolBar" name="PreviewsToolBar">
-   <property name="windowTitle">
-    <string>PrewievsToolBar</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="SmallAction"/>
-   <addaction name="MediumAction"/>
-   <addaction name="LargeAction"/>
-   <addaction name="separator"/>
-   <addaction name="SelectAllAciton"/>
-   <addaction name="DesellectAction"/>
-  </widget>
-  <widget class="QToolBar" name="SearchToolBar">
-   <property name="windowTitle">
-    <string>SearchToolBar</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>true</bool>
-   </attribute>
-  </widget>
+  <widget class="QStatusBar" name="StatusBar"/>
   <action name="SmallAction">
    <property name="text">
     <string>Small</string>
