--- a/ZEAIPrototype/ZEAIMainWindow.ui
+++ b/ZEAIPrototype/ZEAIMainWindow.ui
@@ -65,9 +65,9 @@
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>-287</y>
-          <width>358</width>
-          <height>898</height>
+          <y>0</y>
+          <width>282</width>
+          <height>1056</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -237,54 +237,31 @@
             <item row="0" column="1">
              <widget class="QLineEdit" name="txtActorName"/>
             </item>
-            <item row="1" column="0">
+            <item row="2" column="0">
              <widget class="QLabel" name="label_12">
               <property name="text">
                <string>Position</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
+            <item row="2" column="1">
              <widget class="QLineEdit" name="txtActorPosition">
               <property name="readOnly">
                <bool>true</bool>
               </property>
              </widget>
             </item>
-            <item row="2" column="0">
+            <item row="3" column="0">
              <widget class="QLabel" name="label_13">
               <property name="text">
                <string>Rotation</string>
               </property>
              </widget>
             </item>
-            <item row="2" column="1">
+            <item row="3" column="1">
              <widget class="QLineEdit" name="txtActorRotation">
               <property name="readOnly">
                <bool>true</bool>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0">
-             <widget class="QLabel" name="label_16">
-              <property name="text">
-               <string>Radius</string>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="1">
-             <widget class="QDoubleSpinBox" name="txtRadius">
-              <property name="minimum">
-               <double>0.100000000000000</double>
-              </property>
-              <property name="maximum">
-               <double>100.000000000000000</double>
-              </property>
-              <property name="singleStep">
-               <double>0.100000000000000</double>
-              </property>
-              <property name="value">
-               <double>1.000000000000000</double>
               </property>
              </widget>
             </item>
@@ -303,37 +280,95 @@
              </widget>
             </item>
             <item row="5" column="0">
-             <widget class="QLabel" name="label_17">
+             <widget class="QLabel" name="label_19">
               <property name="text">
-               <string>AngularVelocity</string>
+               <string>Linear Acceleration</string>
               </property>
              </widget>
             </item>
             <item row="5" column="1">
-             <widget class="QLineEdit" name="txtActorAngularVelocity">
+             <widget class="QLineEdit" name="txtActorLinearAcceleration">
               <property name="readOnly">
                <bool>true</bool>
               </property>
              </widget>
             </item>
             <item row="6" column="0">
+             <widget class="QLabel" name="label_17">
+              <property name="text">
+               <string>AngularVelocity</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="1">
+             <widget class="QLineEdit" name="txtActorAngularVelocity">
+              <property name="readOnly">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="0">
+             <widget class="QLabel" name="label_20">
+              <property name="text">
+               <string>AngularAcceleration</string>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="1">
+             <widget class="QLineEdit" name="txtActorAngularAcceleration">
+              <property name="readOnly">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="0">
+             <widget class="QLabel" name="label_4">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="9" column="0">
              <widget class="QLabel" name="label_7">
               <property name="text">
                <string>Steering</string>
               </property>
              </widget>
             </item>
-            <item row="6" column="1">
+            <item row="9" column="1">
              <widget class="QComboBox" name="cmbActorSteering"/>
             </item>
-            <item row="7" column="0">
+            <item row="10" column="0">
+             <widget class="QLabel" name="label_16">
+              <property name="text">
+               <string>Radius</string>
+              </property>
+             </widget>
+            </item>
+            <item row="10" column="1">
+             <widget class="QDoubleSpinBox" name="txtRadius">
+              <property name="minimum">
+               <double>0.100000000000000</double>
+              </property>
+              <property name="maximum">
+               <double>100.000000000000000</double>
+              </property>
+              <property name="singleStep">
+               <double>0.100000000000000</double>
+              </property>
+              <property name="value">
+               <double>1.000000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="11" column="0">
              <widget class="QLabel" name="label_9">
               <property name="text">
                <string>Max Linear Velocity</string>
               </property>
              </widget>
             </item>
-            <item row="7" column="1">
+            <item row="11" column="1">
              <widget class="QDoubleSpinBox" name="txtMaxLinearVelocity">
               <property name="minimum">
                <double>-1000.000000000000000</double>
@@ -346,34 +381,14 @@
               </property>
              </widget>
             </item>
-            <item row="8" column="0">
-             <widget class="QLabel" name="label_14">
-              <property name="text">
-               <string>Max Angular Velocity</string>
-              </property>
-             </widget>
-            </item>
-            <item row="8" column="1">
-             <widget class="QDoubleSpinBox" name="txtMaxAngularVelocity">
-              <property name="minimum">
-               <double>-1000.000000000000000</double>
-              </property>
-              <property name="maximum">
-               <double>1000.000000000000000</double>
-              </property>
-              <property name="singleStep">
-               <double>0.100000000000000</double>
-              </property>
-             </widget>
-            </item>
-            <item row="9" column="0">
+            <item row="12" column="0">
              <widget class="QLabel" name="label_8">
               <property name="text">
                <string>Max Linear Acceleration</string>
               </property>
              </widget>
             </item>
-            <item row="9" column="1">
+            <item row="12" column="1">
              <widget class="QDoubleSpinBox" name="txtMaxLinearAcceleration">
               <property name="minimum">
                <double>-1000.000000000000000</double>
@@ -386,14 +401,34 @@
               </property>
              </widget>
             </item>
-            <item row="10" column="0">
+            <item row="13" column="0">
+             <widget class="QLabel" name="label_14">
+              <property name="text">
+               <string>Max Angular Velocity</string>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="1">
+             <widget class="QDoubleSpinBox" name="txtMaxAngularVelocity">
+              <property name="minimum">
+               <double>-1000.000000000000000</double>
+              </property>
+              <property name="maximum">
+               <double>1000.000000000000000</double>
+              </property>
+              <property name="singleStep">
+               <double>0.100000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="0">
              <widget class="QLabel" name="label_15">
               <property name="text">
                <string>Max Angular Acceleration</string>
               </property>
              </widget>
             </item>
-            <item row="10" column="1">
+            <item row="14" column="1">
              <widget class="QDoubleSpinBox" name="txtMaxAngularAcceleration">
               <property name="minimum">
                <double>-1000.000000000000000</double>
@@ -403,6 +438,13 @@
               </property>
               <property name="singleStep">
                <double>0.100000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label_3">
+              <property name="text">
+               <string/>
               </property>
              </widget>
             </item>
