FIX : ZEMLSerialReader minor bug fixed. CHG : ResourceType added to ZEResourceConfiguratior and it's widget.
svn path=/branches/v0.5.5-NewTools/; revision=1138

--- a/Source/ZETools/ZEToolComponents/ZEResourceConfigurationWidget/ZEResourceConfigurationWidget.ui
+++ b/Source/ZETools/ZEToolComponents/ZEResourceConfigurationWidget/ZEResourceConfigurationWidget.ui
@@ -46,6 +46,11 @@
           </column>
           <column>
            <property name="text">
+            <string>Type</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
             <string>Phsyical Path</string>
            </property>
           </column>
