--- a/Source/ZEditor/ZEDMaterialEditor/ZEDMaterialEditor.ui
+++ b/Source/ZEditor/ZEDMaterialEditor/ZEDMaterialEditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1161</width>
-    <height>821</height>
+    <width>1491</width>
+    <height>797</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,8 +21,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1161</width>
-     <height>21</height>
+     <width>1491</width>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -30,32 +30,11 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="actionSave"/>
     <addaction name="actionSaveAs"/>
     <addaction name="actionClose"/>
    </widget>
-   <widget class="QMenu" name="menuPreview">
-    <property name="title">
-     <string>Preview</string>
-    </property>
-    <addaction name="actionCube"/>
-    <addaction name="actionSphere"/>
-    <addaction name="actionPlane"/>
-    <addaction name="actionCylinder"/>
-   </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuPreview"/>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="actionCube"/>
-   <addaction name="actionSphere"/>
-   <addaction name="actionPlane"/>
-   <addaction name="actionCylinder"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QDockWidget" name="PropertyDockWidget">
@@ -85,33 +64,79 @@
      <item>
       <widget class="QTabWidget" name="PropertyTabWidget">
        <property name="currentIndex">
+        <number>-1</number>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="LightsDockWidget">
+   <property name="minimumSize">
+    <size>
+     <width>300</width>
+     <height>124</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>524287</width>
+     <height>524287</height>
+    </size>
+   </property>
+   <property name="windowTitle">
+    <string>Light Properties</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_2">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QTabWidget" name="LightPropertiesTabWidget">
+       <property name="currentIndex">
         <number>0</number>
        </property>
-       <widget class="QWidget" name="DirectLight1Tab">
+       <widget class="QWidget" name="tab">
         <attribute name="title">
          <string>DirectLight1</string>
         </attribute>
         <layout class="QVBoxLayout" name="DirectLight1TabLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
          <property name="margin">
           <number>0</number>
          </property>
         </layout>
        </widget>
-       <widget class="QWidget" name="DirectLight2Tab">
+       <widget class="QWidget" name="tab_2">
         <attribute name="title">
          <string>DirectLight2</string>
         </attribute>
         <layout class="QVBoxLayout" name="DirectLight2TabLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
          <property name="margin">
           <number>0</number>
          </property>
         </layout>
        </widget>
-       <widget class="QWidget" name="DirectLight3Tab">
+       <widget class="QWidget" name="tab_3">
         <attribute name="title">
          <string>DirectLight3</string>
         </attribute>
         <layout class="QVBoxLayout" name="DirectLight3TabLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
          <property name="margin">
           <number>0</number>
          </property>
@@ -155,6 +180,11 @@
   <action name="actionOpen">
    <property name="text">
     <string>Open</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="text">
+    <string>Save</string>
    </property>
   </action>
  </widget>
