CHG: ZEMLNode, ZEMLProperty, ZEMLData classes now has the functionality to clone themselves. ADD: ZEOperationCut, ZEOperationCopy, ZEOperationPaste classes are added to ZEMLEditor as operations.
svn path=/branches/v0.6.1-NewMeta/; revision=1610

--- a/Source/ZETools/ZEMLEditor/ZEMLEditorWindow.ui
+++ b/Source/ZETools/ZEMLEditor/ZEMLEditorWindow.ui
@@ -31,6 +31,9 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="selectionMode">
+         <enum>QAbstractItemView::ExtendedSelection</enum>
+        </property>
         <column>
          <property name="text">
           <string>Name</string>
