CHG: Typo fix has been made on ZEMLEditor/ZEMLEditorWindow.ui
svn path=/branches/v0.6.1-NewMeta/; revision=1615

--- a/Source/ZETools/ZEMLEditor/ZEMLEditorWindow.ui
+++ b/Source/ZETools/ZEMLEditor/ZEMLEditorWindow.ui
@@ -272,7 +272,7 @@
   </action>
   <action name="actDeselect">
    <property name="text">
-    <string>Delect</string>
+    <string>Deselect</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+D</string>
