--- a/Source/ZETools/ZEMLEditor/ZEMLEditorWindow.ui
+++ b/Source/ZETools/ZEMLEditor/ZEMLEditorWindow.ui
@@ -102,6 +102,8 @@
     <addaction name="actCopy"/>
     <addaction name="actPaste"/>
     <addaction name="actDeselect"/>
+    <addaction name="separator"/>
+    <addaction name="actEditMode"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -128,6 +130,30 @@
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>Main Toolbar</string>
+   </property>
+   <property name="floatable">
+    <bool>true</bool>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actNew"/>
+   <addaction name="actOpen"/>
+   <addaction name="actSave"/>
+   <addaction name="separator"/>
+   <addaction name="actAddNode"/>
+   <addaction name="actAddProperty"/>
+   <addaction name="actAddData"/>
+   <addaction name="actDelete"/>
+   <addaction name="separator"/>
+   <addaction name="actEditMode"/>
+  </widget>
   <action name="actNew">
    <property name="text">
     <string>&amp;New</string>
@@ -137,6 +163,11 @@
    </property>
   </action>
   <action name="actOpen">
+   <property name="icon">
+    <iconset theme="document-open">
+     <normaloff/>
+    </iconset>
+   </property>
    <property name="text">
     <string>&amp;Open</string>
    </property>
@@ -276,6 +307,17 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+D</string>
+   </property>
+  </action>
+  <action name="actEditMode">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Editing Mode</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
    </property>
   </action>
  </widget>
