ADD: ZEDSceneWrapper class has been added to project to unify ZEObjectWrappers hierarchy and represent a root object for traversal purposes. CHG: Initialization process has been revised. ZEDViewPort creation has been relocated to ZEDMainEditor class.
svn path=/branches/v0.6.2-NewEditor/; revision=1707

--- a/Source/ZEditor/ZEDSceneEditor/ZEDMainEditor.ui
+++ b/Source/ZEditor/ZEDSceneEditor/ZEDMainEditor.ui
@@ -373,6 +373,9 @@
    <property name="text">
     <string>Rotate</string>
    </property>
+   <property name="shortcut">
+    <string>R</string>
+   </property>
   </action>
   <action name="actMove">
    <property name="checkable">
@@ -381,6 +384,9 @@
    <property name="text">
     <string>Move</string>
    </property>
+   <property name="shortcut">
+    <string>E</string>
+   </property>
   </action>
   <action name="actScale">
    <property name="checkable">
@@ -388,6 +394,9 @@
    </property>
    <property name="text">
     <string>Scale</string>
+   </property>
+   <property name="shortcut">
+    <string>T</string>
    </property>
   </action>
   <action name="actHelp">
@@ -439,6 +448,9 @@
    </property>
    <property name="text">
     <string>Select</string>
+   </property>
+   <property name="shortcut">
+    <string>Q</string>
    </property>
   </action>
   <action name="DeleteAction">
