FIX: Minor and major bug fixes and improvements have been don ZELCLicense. IMP: Launcher license module ZELNLicenseModule has been implemented by using ZELCLicense. IMP: ZELCLicenseTool source code have been reorganized and improved. FIX: ZEMetaCompiler ZEPackStruct problems has been fixed.
svn path=/trunk/; revision=1755

--- a/Source/ZELNLauncher/ZELNLauncher.qrc
+++ b/Source/ZELNLauncher/ZELNLauncher.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="ZELNLauncher">
     <file alias="ZinekCodeHouse.png">Resources/ZinekCodeHouse.png</file>
+    <file>Resources/ZinekEngine.ico</file>
     <file alias="Logo.png">Resources/Logo.png</file>
   </qresource>
 </RCC>
