--- a/Source/ZELNLauncher/ZELNLauncherWindow.ui
+++ b/Source/ZELNLauncher/ZELNLauncherWindow.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Zinek Launcher</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="ZELNLauncher.qrc">
+    <normaloff>:/ZELNLauncher/Resources/ZinekEngine.ico</normaloff>:/ZELNLauncher/Resources/ZinekEngine.ico</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">QScrollArea { background: transparent; }
 QScrollArea &gt; QWidget &gt; QWidget { background: transparent; }</string>
