--- a/Source/ZETools/ZELCLicenseTool/ZELCLicenseToolWindow.ui
+++ b/Source/ZETools/ZELCLicenseTool/ZELCLicenseToolWindow.ui
@@ -294,7 +294,7 @@
    <item>
     <widget class="QLabel" name="label_11">
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;Crack by Orcuan. GFX by Orcuan. SFX by Razor 1911&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;Crack by Z1N34KTeam GFX by Orcuan. SFX by Dubmod/Razor1911&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </item>
